Adding the Fetured section of this website

--- a/index.html
+++ b/index.html
@@ -1,19 +1,75 @@
+<!-- This website made based on 1600px width -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/fresh-1.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="stylesheet" href="Styles/Phone.css">
     <title>TEA-O-CHA</title>
 </head>
 <body>
-    <header>
+
+    <header class="heading manrope">
+        <div class="Hero-discription">
+            <h1>It's good tea time at The <br>Tea House</h1>
+            <p>Tea and Botanical Solutions Supplier Give Optimum<br> Satisfaction To Your Taste Buds.</p>
+            <button><a href="#">Explore More</a><img src="./images/arrow.png" alt=""></button>
+        </div>
+        <div class="Hero-pic">
+            <div class="pic">
+                <img src="./images/banner.png" alt="">
+            </div>
+            <div class="rate">
+                <div class="star">
+                    <img src="./images/icons8-star-64.png" alt="">
+                </div>
+                <div class="rating">
+                    <h6>5.00</h6>
+                    <p>Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
 
     </header>
     <main>
+        <section class="Featured manrope">
+            <div class="Featured-disc">
+                <h1>Our Featured Products</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="products">
+                <div class="cards">
+                    <img src="./images/tea-1.png" alt="">
+                    <h6>Milk Tea</h6>
+                    <p>Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="cards">
+                    <img src="./images/tea-2.png" alt="">
+                    <h6>Black Tea</h6>
+                    <p>Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="cards">
+                    <img src="./images/tea-3.png" alt="">
+                    <h6>Lemon Tea</h6>
+                    <p>Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="cards">
+                    <img src="./images/tea-4.png" alt="">
+                    <h6>Green Tea</h6>
+                    <p>Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
